@@ -1,3 +1,8 @@
+2006-04-30  Bruno Haible  <bruno@clisp.org>
+
+	* stdarg.m4: New file.
+	* Makefile.am (EXTRA_DIST): Add it.
+
 2006-05-01  Bruno Haible  <bruno@clisp.org>
 
 	* javacomp.m4 (gt_JAVACOMP): Accept a source-version and an optional
